mesa (13.0.0~rc1-1) UNRELEASED; urgency=medium

  * New upstream release candidate.
  * control, rules: Use llvm/clang 3.9 (Closes: #836913).
  * control: Bump libclc dependencies.
  * Bump libdrm-dev build-dep to 2.4.69 per configure.ac.
  * Remove libudev-dev and libudev1 dependencies per configure.ac.
  * Enable OpenCL on kfreebsd-* since we don't need udev anymore.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Fri, 21 Oct 2016 10:06:56 +0200

mesa (12.0.3-2) unstable; urgency=medium

  * control: Add libtxc-dxtn-s2tc as an alternative in libgl1-mesa-dri's
    Recommends (Closes: #839658).
  * control: Add strictly versioned dependency on libgbm1 to libegl1-
    mesa.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Fri, 21 Oct 2016 09:49:37 +0200

mesa (12.0.3-1) unstable; urgency=medium

  * New upstream release.
  * Enable vc4 on arm64.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 15 Sep 2016 13:38:40 +0200

mesa (12.0.2-1) unstable; urgency=medium

  * New upstream release.
  * rules: Pass -c4 to dpkg-gensymbols through dh_makeshlibs, got
    dropped with the migration to dh.
  * rules: Replace deprecated debhelper option -s with -a.
  * copyright: Sync with docs/license.html.
  * Replace almost all dynamic debhelper config files with static files.
  * rules: Drop unneeded override_dh_builddeb, xz is the default
    compression type for dpkg-deb nowadays.
  * Replace mesa-vulkan-drivers.post{inst,rm} with mesa-vulkan-
    drivers.triggers.
  * control: Only build-dep on libgcrypt20-dev on architectures where we
    build mesa-vulkan-drivers.
  * source/local-options: Add more files to extend-diff-ignore option.
    Fixes 87 patch-system-but-direct-changes-in-diff lintian warnings.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 06 Sep 2016 10:37:23 +0200

mesa (12.0.1-3) experimental; urgency=medium

  * rules, control: Build mesa-vulkan-drivers only on linux-
    {amd64,i386,x32}.
