@@ -1,2 +1,3 @@
 usr/share/vulkan/icd.d/*.json
 usr/lib/*/libvulkan_intel.so
+usr/lib/*/libvulkan_radeon.so
